Use weekly based workfolow to track tasks

--- a/weekly/2023-W20.md
+++ b/weekly/2023-W20.md
@@ -1,52 +1,23 @@
 ---
-date: '2023-04-28'
-draft: 'true'
+id: "weekly"
+aliases:
+  - "Review Week 20 / 2023"
 tags:
-- inbox
-- definition
-sr-due: 2023-05-21
-sr-interval: 4
-sr-ease: 270
+  - "weekly"
+title: "2023-W20"
 ---
 
-# Inbox
+# Review Week 20 / 2023
 
-This is my long-running inbox of things to do... Most of them I moved from daily
-tasks.
-
-## Easy
+---
 
 - [ ] https://youtu.be/yqyzD4bfw7k
 - [ ] https://gist.github.com/nicosh/b4ef0d2392f78a241d600806c5328952
-- [ ] Review [@Obsidiantracker]
 - [ ] pytest & pycon flashcards
-- [x] Python dict update, last one wins ::TODO: flashcard::
-- [x] fix suspend
-- [x] open save dialog files default order
-- [c] ~~"````" instead pyc nvim snippet~~
-- [x] check mocking in Pycon video / find additional info
-- [x] nevoim 0.9 editorconfig test (markdown min-width? / column width?)
-- [x] nvim/plugin/... directory clean
-- [x] Zerotier internet test
-- [x] buy tasker
+- [ ] describe tasker/dnd setup
 
-- [x] Samba connect to music folder...
-- [n] Work playlist in strawberry
-- [n] Meditatio/relax playlist in strawberry
-- [n] Workouts playlist in strawberry
-
-
-## Medium
-
-- [x] study roadmap review
-- [x] Not disturb tasker + PC
 - [ ] sync dotfiles nvim and check it
 - [ ] dmenu keybindings to notes
-- [n] Fix Simple English Wikipedia not wikipedia in simple english
-      how subtitute recursive search with confirmations using nvim?
-- [x] sync dotfiles
-- [x] vdirsyncer khal check
-- [x] pam.d gpg setup
 - [ ] gptVSmbr difference note
 - [ ] shift+enter - dmenu term wait?
 - [ ] assoc fix in brave? (rar)
@@ -65,9 +36,6 @@ tasks.
 - [ ] zotero @notes fix
 - [ ] improve generate-image2.sh script
 
-## Hard
-
-- [n] backup instances, 3 - 2 - 1
 - [ ] zotero script to find broken attachments (not linked...)
 - [ ] dunst DND after better way to check notifications, tasker integration
 - [ ] habbit tasks and repeat them
@@ -84,10 +52,28 @@ tasks.
 - [ ] telekasten insert link follow grammar rules, add |title item, correct
       rename (UUID issue?)
 
-## Python
-- [x] https://gist.github.com/tasdikrahman/2bdb3fb31136a3768fac, not worked as
-  expected
-- [ ] https://flask.palletsprojects.com/en/2.2.x/testing/
-- [ ] https://youtu.be/eJDIsFJN4OQ
-- [ ] https://youtu.be/Q7AOvWpIVHU
-- [ ] https://gist.github.com/eruvanos/f6f62edb368a20aaa880e12976620db8
+- NEXT: Fix Simple English Wikipedia not wikipedia in simple english
+  NEXT: how subtitute recursive search with confirmations using nvim?
+- NEXT: backup instances, 3 - 2 - 1
+- NEXT: Work playlist in strawberry
+- NEXT: Meditatio/relax playlist in strawberry
+- NEXT: Workouts playlist in strawberry
+- NEXT: Structure how I study notes
+- NEXT: sync dotfiles
+- NEXT: automatic lock on token remove/suspend
+- NEXT: check if I can use gpg-agent with pam
+
+
+- DONE: vdirsyncer khal checking events script
+- DONE: pam.d gpg setup, basics like login/ssh
+- DONE: Python dict update, last one wins
+- DONE: fix suspend, fixed by configure AMD GPU through linux kernel parameters
+- DONE: open save dialog files default order
+- DONE: check mocking in Pycon video / find additional info
+- DONE: nevoim 0.9 editorconfig test (markdown min-width? / column width?), working as expected
+- DONE: Zerotier internet access test, yes it works
+- DONE: buy tasker, Android
+- DONE: Samba connect to music folder...
+- DONE: Not disturb tasker + PC
+- KILL: ~~"````" instead pyc nvim snippet~~
+- KILL: ~~nvim/plugin/... directory clean~~, was fine
