--- a/weekly/2023-W20.md
+++ b/weekly/2023-W20.md
@@ -11,12 +11,9 @@ title: "2023-W20"
 
 ---
 
-- [ ] https://youtu.be/yqyzD4bfw7k
 - [ ] https://gist.github.com/nicosh/b4ef0d2392f78a241d600806c5328952
 - [ ] pytest & pycon flashcards
-- [ ] describe tasker/dnd setup
 
-- [ ] sync dotfiles nvim and check it
 - [ ] dmenu keybindings to notes
 - [ ] gptVSmbr difference note
 - [ ] shift+enter - dmenu term wait?
@@ -52,6 +49,7 @@ title: "2023-W20"
 - [ ] telekasten insert link follow grammar rules, add |title item, correct
       rename (UUID issue?)
 
+- NEXT: describe tasker/dnd setup
 - NEXT: Fix Simple English Wikipedia not wikipedia in simple english
   NEXT: how subtitute recursive search with confirmations using nvim?
 - NEXT: backup instances, 3 - 2 - 1
@@ -75,5 +73,6 @@ title: "2023-W20"
 - DONE: buy tasker, Android
 - DONE: Samba connect to music folder...
 - DONE: Not disturb tasker + PC
+
 - KILL: ~~"````" instead pyc nvim snippet~~
 - KILL: ~~nvim/plugin/... directory clean~~, was fine
