Update todo list

--- a/weekly/2023-W20.md
+++ b/weekly/2023-W20.md
@@ -28,9 +28,7 @@ title: "2023-W20"
 - [ ] proxy-server
 - [ ] gnu pass note
 - [ ] hibernate/swap test
-- [ ] adguard notes
 - [ ] debugging articles
-- [ ] zotero @notes fix
 - [ ] improve generate-image2.sh script
 
 - [ ] zotero script to find broken attachments (not linked...)
@@ -38,9 +36,7 @@ title: "2023-W20"
 - [ ] habbit tasks and repeat them
 - [ ] adguard -> dns -> zerotier hosts
 - [ ] colorscheme check: khal, glances, ncdu
-- [ ] all used services describe
 
-- [ ] bash, readline - find diff, notes
 - [ ] screen recording, test sound, show saving path and the end
 - [ ] save full screenshot update notification - add path
 - [ ] opencv + screen + click script
@@ -49,19 +45,19 @@ title: "2023-W20"
 - [ ] telekasten insert link follow grammar rules, add |title item, correct
       rename (UUID issue?)
 
+- NEXT: all used services in one place, awesome services
+- NEXT: adguard notes
+- NEXT: bash, readline - find diff, notes
 - NEXT: describe tasker/dnd setup
 - NEXT: Fix Simple English Wikipedia not wikipedia in simple english
   NEXT: how subtitute recursive search with confirmations using nvim?
 - NEXT: backup instances, 3 - 2 - 1
-- NEXT: Work playlist in strawberry
-- NEXT: Meditatio/relax playlist in strawberry
 - NEXT: Workouts playlist in strawberry
 - NEXT: Structure how I study notes
-- NEXT: sync dotfiles
 - NEXT: automatic lock on token remove/suspend
 - NEXT: check if I can use gpg-agent with pam
 
-
+- DONE: Work playlist in strawberry
 - DONE: vdirsyncer khal checking events script
 - DONE: pam.d gpg setup, basics like login/ssh
 - DONE: Python dict update, last one wins
@@ -76,3 +72,4 @@ title: "2023-W20"
 
 - KILL: ~~"````" instead pyc nvim snippet~~
 - KILL: ~~nvim/plugin/... directory clean~~, was fine
+- KILL: ~~Meditatio/relax playlist in strawberry~~, used work playlist
