--- a/weekly/2023-W20.md
+++ b/weekly/2023-W20.md
@@ -44,7 +44,10 @@ title: "2023-W20"
 - [ ] mouseless-workflow make more relevant
 - [ ] telekasten insert link follow grammar rules, add |title item, correct
       rename (UUID issue?)
+- [ ] level 1, level 2, level 3 tags from zotero
+- [ ] audio books workflow
 
+- NEXT: Certificates check (expired, etc...), cron job?
 - NEXT: all used services in one place, awesome services
 - NEXT: adguard notes
 - NEXT: bash, readline - find diff, notes
