Fix books storage

--- a/weekly/2023-W20.md
+++ b/weekly/2023-W20.md
@@ -47,6 +47,14 @@ title: "2023-W20"
 - [ ] level 1, level 2, level 3 tags from zotero
 - [ ] audio books workflow
 
+- [ ] koreader
+- [ ] Xodo
+- [ ] golden dict
+- [ ] encyclopedia
+- [ ] manga and comics
+- [ ] tachiyomi
+
+
 - NEXT: Certificates check (expired, etc...), cron job?
 - NEXT: all used services in one place, awesome services
 - NEXT: adguard notes
