Add new CS topics/structure CS roadmap

--- a/weekly/2023-W20.md
+++ b/weekly/2023-W20.md
@@ -54,6 +54,19 @@ title: "2023-W20"
 - [ ] manga and comics
 - [ ] tachiyomi
 
+- [ ] queue
+- [ ] singley-linked list
+- [ ] doubly-linked-list
+- [ ] skip list
+- [ ] hash table
+- [ ] binary search tree, [[binary search tree]], [[binary search algorithm]]
+- [ ] B-tree, [[b-tree]]
+- [ ] Cartesian tree
+- [ ] Red-Black Tree
+- [ ] Splay Tree
+- [ ] AVL Tree
+- [ ] KD Tree
+
 
 - NEXT: Certificates check (expired, etc...), cron job?
 - NEXT: all used services in one place, awesome services
