--- a/weekly/2023-W20.md
+++ b/weekly/2023-W20.md
@@ -54,24 +54,32 @@ title: "2023-W20"
 - [ ] manga and comics
 - [ ] tachiyomi
 
-- [ ] queue
 - [ ] singley-linked list
 - [ ] doubly-linked-list
 - [ ] skip list
-- [ ] hash table
-- [ ] binary search tree, [[binary search tree]], [[binary search algorithm]]
-- [ ] B-tree, [[b-tree]]
 - [ ] Cartesian tree
 - [ ] Red-Black Tree
 - [ ] Splay Tree
 - [ ] AVL Tree
 - [ ] KD Tree
 
+- [ ] [My Inventions Nikola Tesla](https://archive.org/details/MyInventionsNikolaTesla/page/n29/mode/2up)
+- [ ] [Crafting Interpreters](http://craftinginterpreters.com/)
+- [ ] ldd utility
+- [ ] keybindings in command mode
+- [ ] openai SHAP-E
+
+- NEXT: true colemak-dh layer + indicator
+
+- NEXT: bash, readline - find diff, notes
 
 - NEXT: Certificates check (expired, etc...), cron job?
+
 - NEXT: all used services in one place, awesome services
+
 - NEXT: adguard notes
-- NEXT: bash, readline - find diff, notes
+
+
 - NEXT: describe tasker/dnd setup
 - NEXT: Fix Simple English Wikipedia not wikipedia in simple english
   NEXT: how subtitute recursive search with confirmations using nvim?
