--- a/какие джинсы выбрать.md
+++ b/какие джинсы выбрать.md
@@ -177,3 +177,30 @@ L (Lenght) – длина. Она же – шаговый шов. Измеряе
 
 Если у вас есть возможность, примерьте джинсы, чтобы убедиться, что они подходят
 вам по размеру и комфорту.
+
+## Levis jeans series
+
+|FIELD1  |#  |Massive Thighs?|Skinny Guy?|Average Guy?|Fat Guy?|Are You A Cowboy?|Skinny Cut Legs?|Slim Cut Legs?|Tapered Legs?|Straight Cut Legs?|Boot Cut?|Relaxed Legs?|
+|--------|---|---------------|-----------|------------|--------|-----------------|----------------|--------------|-------------|------------------|---------|-------------|
+|Skinny  |519|               |Yes        |            |        |                 |Yes             |              |             |                  |         |             |
+|        |501|               |Yes        |            |        |                 |Yes             |              |             |                  |         |             |
+|        |510|               |Yes        |            |        |                 |Yes             |              |             |                  |         |             |
+|Slim    |511|               |Yes        |            |        |                 |                |Yes           |             |                  |         |             |
+|        |513|               |Yes        |            |        |                 |                |              |Yes          |                  |         |             |
+|        |522|               |Yes        |            |        |                 |                |              |Yes          |                  |         |             |
+|        |512|               |Yes        |Yes         |Yes     |                 |                |Yes           |             |                  |         |             |
+|        |603|               |Yes        |Yes         |Yes     |                 |                |Yes           |             |                  |         |             |
+|Tapered |508|Yes            |           |Yes         |Yes     |                 |                |              |Yes          |                  |         |             |
+|        |502|Yes            |           |            |Yes     |                 |                |              |Yes          |                  |         |             |
+|        |501|               |           |Yes         |Yes     |                 |                |              |Yes          |                  |         |             |
+|        |504|               |           |Yes         |Yes     |                 |                |              |Yes          |                  |         |             |
+|Straight|501|               |           |Yes         |Yes     |                 |                |              |             |Yes               |         |             |
+|        |504|               |           |Yes         |Yes     |                 |                |              |             |Yes               |         |             |
+|        |505|               |           |Yes         |Yes     |                 |                |              |             |Yes               |         |             |
+|        |513|               |           |Yes         |Yes     |                 |                |              |             |Yes               |         |             |
+|        |514|Yes            |           |Yes         |Yes     |                 |                |              |             |Yes               |         |             |
+|        |541|Yes            |           |Yes         |Yes     |                 |                |              |             |Yes               |         |Yes          |
+|Boot Cut|503|               |           |            |        |Yes              |                |              |             |                  |Yes      |             |
+|        |517|               |           |            |        |Yes              |                |              |             |                  |Yes      |             |
+|Relaxed |541|Yes            |           |            |        |                 |                |              |             |                  |         |Yes          |
+
