Add new weekly notes

--- a/weekly/2023-W20.md
+++ b/weekly/2023-W20.md
@@ -11,84 +11,6 @@ title: "2023-W20"
 
 ---
 
-- [ ] https://gist.github.com/nicosh/b4ef0d2392f78a241d600806c5328952
-- [ ] pytest & pycon flashcards
-
-- [ ] dmenu keybindings to notes
-- [ ] gptVSmbr difference note
-- [ ] shift+enter - dmenu term wait?
-- [ ] assoc fix in brave? (rar)
-- [ ] https://www.youtube.com/watch?v=cgYMtuFa8Iw&t=3s
-- [ ] test coc-pyright, custom nvim instance?
-- [ ] qmk qwerty fallback (additional layer)
-- [ ] Vim image paste script (download image, resize, etc..., frequency hence?)
-- [ ] Vim format comments / align comments (vertical align)
-- [ ] Vim rename image under cursor in markdown file
-- [ ] review aliases
-- [ ] proxy-server
-- [ ] gnu pass note
-- [ ] hibernate/swap test
-- [ ] debugging articles
-- [ ] improve generate-image2.sh script
-
-- [ ] zotero script to find broken attachments (not linked...)
-- [ ] dunst DND after better way to check notifications, tasker integration
-- [ ] habbit tasks and repeat them
-- [ ] adguard -> dns -> zerotier hosts
-- [ ] colorscheme check: khal, glances, ncdu
-
-- [ ] screen recording, test sound, show saving path and the end
-- [ ] save full screenshot update notification - add path
-- [ ] opencv + screen + click script
-- [ ] music vidio pictures workflow
-- [ ] mouseless-workflow make more relevant
-- [ ] telekasten insert link follow grammar rules, add |title item, correct
-      rename (UUID issue?)
-- [ ] level 1, level 2, level 3 tags from zotero
-- [ ] audio books workflow
-
-- [ ] koreader
-- [ ] Xodo
-- [ ] golden dict
-- [ ] encyclopedia
-- [ ] manga and comics
-- [ ] tachiyomi
-
-- [ ] singley-linked list
-- [ ] doubly-linked-list
-- [ ] skip list
-- [ ] Cartesian tree
-- [ ] Red-Black Tree
-- [ ] Splay Tree
-- [ ] AVL Tree
-- [ ] KD Tree
-
-- [ ] [My Inventions Nikola Tesla](https://archive.org/details/MyInventionsNikolaTesla/page/n29/mode/2up)
-- [ ] [Crafting Interpreters](http://craftinginterpreters.com/)
-- [ ] ldd utility
-- [ ] keybindings in command mode
-- [ ] openai SHAP-E
-
-- NEXT: true colemak-dh layer + indicator
-
-- NEXT: bash, readline - find diff, notes
-
-- NEXT: Certificates check (expired, etc...), cron job?
-
-- NEXT: all used services in one place, awesome services
-
-- NEXT: adguard notes
-
-
-- NEXT: describe tasker/dnd setup
-- NEXT: Fix Simple English Wikipedia not wikipedia in simple english
-  NEXT: how subtitute recursive search with confirmations using nvim?
-- NEXT: backup instances, 3 - 2 - 1
-- NEXT: Workouts playlist in strawberry
-- NEXT: Structure how I study notes
-- NEXT: automatic lock on token remove/suspend
-- NEXT: check if I can use gpg-agent with pam
-
 - DONE: Work playlist in strawberry
 - DONE: vdirsyncer khal checking events script
 - DONE: pam.d gpg setup, basics like login/ssh
@@ -101,6 +23,10 @@ title: "2023-W20"
 - DONE: buy tasker, Android
 - DONE: Samba connect to music folder...
 - DONE: Not disturb tasker + PC
+- DONE: true colemak-dh layer + indicator, added to qmk
+- DONE: Structure how I study notes
+- DONE: osd progress bar for volume, brightness, etc... I just better configured
+  dwmblocks
 
 - KILL: ~~"````" instead pyc nvim snippet~~
 - KILL: ~~nvim/plugin/... directory clean~~, was fine
