--- a/weekly/2023-W21.md
+++ b/weekly/2023-W21.md
@@ -73,7 +73,11 @@ title: "2023-W21"
 - [ ] keybindings in command mode
 - [ ] openai SHAP-E
 - [ ] https://github.com/systemd/zram-generator
+- [ ] https://webuxlab.com/en/projects/vm-passthrough-parsec
+- [x] https://0day.work/locking-the-screen-when-removing-a-yubikey/
+- [ ] https://docs.onlykey.io/usersguide.html
 
+- NEXT: zsh smart history
 - NEXT: bash, readline - find diff, notes
 - NEXT: Certificates check (expired, etc...), cron job?
 - NEXT: all used services in one place, awesome services
