Better structure todo

--- a/weekly/2023-W21.md
+++ b/weekly/2023-W21.md
@@ -77,19 +77,22 @@ title: "2023-W21"
 - [x] https://0day.work/locking-the-screen-when-removing-a-yubikey/
 - [ ] https://docs.onlykey.io/usersguide.html
 
-- NEXT: zsh smart history
-- NEXT: bash, readline - find diff, notes
-- NEXT: Certificates check (expired, etc...), cron job?
-- NEXT: all used services in one place, awesome services
-- NEXT: adguard notes
-- NEXT: describe tasker/dnd setup
-- NEXT: Fix Simple English Wikipedia not wikipedia in simple english
-  NEXT: how subtitute recursive search with confirmations using nvim?
-- NEXT: backup instances, 3 - 2 - 1
-- NEXT: Workouts playlist in strawberry
-- NEXT: automatic lock on token remove/suspend
-- NEXT: check if I can use gpg-agent with pam
-
+- [ ] oneliner's programs optimizations or...
 
 ## Next
+
+- [ ] work with z-shell note (hotkeys)
+- [ ] bash, readline - find diff, notes
+- [x] automatic lock on token remove/suspend
+- [ ] review handmade hero to-do list
+- [ ] zsh smart history
+- [ ] Certificates check (expired, etc...), cron job?
+- [ ] all used services in one place, awesome services
+- [ ] AdGuard notes
+- [ ] describe tasker/dnd setup
+- [ ] Fix Simple English Wikipedia not wikipedia in simple english
+  [ ] how subtitute recursive search with confirmations using nvim?
+- [ ] backup instances, 3 - 2 - 1
+- [ ] Workouts playlist in strawberry
+- [ ] check if I can use gpg-agent with pam
 
