Add new todo items

--- a/weekly/2023-W21.md
+++ b/weekly/2023-W21.md
@@ -96,3 +96,9 @@ title: "2023-W21"
 - [ ] Workouts playlist in strawberry
 - [ ] check if I can use gpg-agent with pam
 
+- [x] https://repost.aws/knowledge-center/rds-snapshots-share-account
+- [ ] Shared fonts
+- [ ] Sort dictionaries
+- [x] Shared dictionaries
+- [x] Chehol
+- [x] video service 6-month sub
