Move tasks into new week

--- a/weekly/2023-W21.md
+++ b/weekly/2023-W21.md
@@ -13,92 +13,17 @@ title: "2023-W21"
 
 ## Highlights
 
-## Inbox
+Not perfect but still a good week. I'm happy with the progress on the new
+workflow, deep education apps integration, "AI" apps integration.
 
-- [ ] https://gist.github.com/nicosh/b4ef0d2392f78a241d600806c5328952
-- [ ] pytest & pycon flashcards
+Here was place of sadness, but need to move on.
 
-- [ ] dmenu keybindings to notes
-- [ ] gptVSmbr difference note
-- [ ] shift+enter - dmenu term wait?
-- [ ] assoc fix in brave? (rar)
-- [ ] https://www.youtube.com/watch?v=cgYMtuFa8Iw&t=3s
-- [ ] test coc-pyright, custom nvim instance?
-- [ ] qmk qwerty fallback (additional layer)
-- [ ] Vim image paste script (download image, resize, etc..., frequency hence?)
-- [ ] Vim format comments / align comments (vertical align)
-- [ ] Vim rename image under cursor in markdown file
-- [ ] review aliases
-- [ ] proxy-server
-- [ ] gnu pass note
-- [ ] hibernate/swap test
-- [ ] debugging articles
-- [ ] improve generate-image2.sh script
+## Done
 
-- [ ] zotero script to find broken attachments (not linked...)
-- [ ] dunst DND after better way to check notifications, tasker integration
-- [ ] habbit tasks and repeat them
-- [ ] adguard -> dns -> zerotier hosts
-- [ ] colorscheme check: khal, glances, ncdu
-
-- [ ] screen recording, test sound, show saving path and the end
-- [ ] save full screenshot update notification - add path
-- [ ] opencv + screen + click script
-- [ ] music vidio pictures workflow
-- [ ] mouseless-workflow make more relevant
-- [ ] telekasten insert link follow grammar rules, add |title item, correct
-      rename (UUID issue?)
-- [ ] level 1, level 2, level 3 tags from zotero
-- [ ] audio books workflow
-
-- [ ] koreader
-- [ ] Xodo
-- [ ] golden dict
-- [ ] encyclopedia
-- [ ] manga and comics
-- [ ] tachiyomi
-
-- [ ] singley-linked list
-- [ ] doubly-linked-list
-- [ ] skip list
-- [ ] Cartesian tree
-- [ ] Red-Black Tree
-- [ ] Splay Tree
-- [ ] AVL Tree
-- [ ] KD Tree
-
-- [ ] [My Inventions Nikola Tesla](https://archive.org/details/MyInventionsNikolaTesla/page/n29/mode/2up)
-- [ ] [Crafting Interpreters](http://craftinginterpreters.com/)
-- [ ] ldd utility
-- [ ] keybindings in command mode
-- [ ] openai SHAP-E
-- [ ] https://github.com/systemd/zram-generator
-- [ ] https://webuxlab.com/en/projects/vm-passthrough-parsec
-- [x] https://0day.work/locking-the-screen-when-removing-a-yubikey/
-- [ ] https://docs.onlykey.io/usersguide.html
-
-- [ ] oneliner's programs optimizations or...
-
-## Next
-
-- [ ] work with z-shell note (hotkeys)
-- [ ] bash, readline - find diff, notes
-- [x] automatic lock on token remove/suspend
-- [ ] review handmade hero to-do list
-- [ ] zsh smart history
-- [ ] Certificates check (expired, etc...), cron job?
-- [ ] all used services in one place, awesome services
-- [ ] AdGuard notes
-- [ ] describe tasker/dnd setup
-- [ ] Fix Simple English Wikipedia not wikipedia in simple english
-  [ ] how subtitute recursive search with confirmations using nvim?
-- [ ] backup instances, 3 - 2 - 1
-- [ ] Workouts playlist in strawberry
-- [ ] check if I can use gpg-agent with pam
-
+- [x] Global tablet/phone setup, including apps, unified interface, etc.
 - [x] https://repost.aws/knowledge-center/rds-snapshots-share-account
-- [ ] Shared fonts
-- [ ] Sort dictionaries
 - [x] Shared dictionaries
-- [x] Chehol
 - [x] video service 6-month sub
+- [x] https://0day.work/locking-the-screen-when-removing-a-yubikey/
+- [x] Audio books workflow
+- [x] zsh smart history
