--- a/weekly/2023-W22.md
+++ b/weekly/2023-W22.md
@@ -9,17 +9,22 @@ tags:
 
 ## Significant events
 
-- [ ] work with **main** project, maybe need to check accounts
+- [ ] work with **main** project, maybe need to check accounts 1/♾️
 - [ ] lessons from [[@PythonTutorial2023]]
 - [ ] check/work with [[comprehensive python cheatsheet]]
 - [ ] lessons from [[@JayWengrowCommonsenseGuideData2020]]
 - [ ] lessons from [[@BrianWKernighanProgrammingLanguage1988]]
-- [ ] [[@CaseyMuratoriHandmadeHero2014]] videos during the week
+- [ ] [[@CaseyMuratoriHandmadeHero2014]] videos during the week 2.5/♾️
 - [ ] workouts during the week according to the [[exercise plan]]
-- [ ] lessons from [Drawabox](https://drawabox.com/)
+- [ ] lessons from [Drawabox](https://drawabox.com/) 1/♾️
 
 ## Next
 
+- [ ] rg pattern guide, find `\ ? \` through notes, auto-formatting script
+- [ ] fd/rg search through hidden files
+- [ ] neovim sudo save
+- [ ] zerotier own domain/hostname
+- [ ] settings repository sync?
 - [ ] check book Inko Ai Takita, Liz Staley - Learn Clip Studio Paint
 - [ ] Find case for phone
 - [ ] check watch - 143391459
