--- a/@CaseyMuratoriHandmadeHero2014/day_001-010.md
+++ b/@CaseyMuratoriHandmadeHero2014/day_001-010.md
@@ -14,6 +14,17 @@ Usually items in struct is sequentially stored With alignment.
 In C to use struct need define it first, but you can use `typedef` to define it
 and use it at the same time.
 
+A lot of questions. There deep WINAPI integration, I propably need to rewatch this intro, too many unknown stuff. And I also check MSDN docs and of course QA session (first).
+
+We use ansi winapi functions.
+
+for(;;) used instead of while(1) to remove some warnings, looks like it's more convential way to create infinity loop
+
+TODO: sticky heading plugin -> need move into win
+TODO: watch debugger video, maybe automatic debugger attach on compile?
+obsidian
+TODO: need to understand masking in C better (&/etc), here was good video in Russian
+
 ## [Day 002qa: Opening a Win32 Window - Q&A](https://hero.handmade.network/episode/code/day002qa/)
 
 ## [Day 003: Allocating a Back Buffer](https://hero.handmade.network/episode/code/day003/)
