--- a/weekly/2023-W22.md
+++ b/weekly/2023-W22.md
@@ -13,7 +13,7 @@ tags:
 - [ ] lessons from [[@PythonTutorial2023]]
 - [ ] check/work with [[comprehensive python cheatsheet]]
 - [ ] lessons from [[@JayWengrowCommonsenseGuideData2020]]
-- [ ] lessons from [[@BrianWKernighanProgrammingLanguage1988]]
+- [ ] lessons from [[papis/9c8a1a90d37c313ce0809814e3c99f82-kernighan-brian-w./notes]]
 - [ ] [[@CaseyMuratoriHandmadeHero2014]] videos during the week 2.5/♾️
 - [ ] workouts during the week according to the [[exercise plan]]
 - [ ] lessons from [Drawabox](https://drawabox.com/) 1/♾️
