--- a/weekly/2023-W22.md
+++ b/weekly/2023-W22.md
@@ -12,7 +12,7 @@ tags:
 - [ ] work with **main** project, maybe need to check accounts 1/♾️
 - [ ] lessons from [[@PythonTutorial2023]]
 - [ ] check/work with [[comprehensive python cheatsheet]]
-- [ ] lessons from [[@JayWengrowCommonsenseGuideData2020]]
+- [ ] lessons from [[papis/2ef118ce3473c9fe93acfc371e3f736e-wengrow-jay/notes]]
 - [ ] lessons from [[papis/9c8a1a90d37c313ce0809814e3c99f82-kernighan-brian-w./notes]]
 - [ ] [[@CaseyMuratoriHandmadeHero2014]] videos during the week 2.5/♾️
 - [ ] workouts during the week according to the [[exercise plan]]
