--- a/weekly/2023-W22.md
+++ b/weekly/2023-W22.md
@@ -14,7 +14,7 @@ tags:
 - [ ] check/work with [[comprehensive python cheatsheet]]
 - [ ] lessons from [[papis/2ef118ce3473c9fe93acfc371e3f736e-wengrow-jay/notes]]
 - [ ] lessons from [[papis/9c8a1a90d37c313ce0809814e3c99f82-kernighan-brian-w./notes]]
-- [ ] [[@CaseyMuratoriHandmadeHero2014]] videos during the week 2.5/♾️
+- [ ] [[papis/6f54b541f411cd3867159abbed2f6373-muratori-casey/notes]] videos during the week 2.5/♾️
 - [ ] workouts during the week according to the [[exercise plan]]
 - [ ] lessons from [Drawabox](https://drawabox.com/) 1/♾️
 
