--- a/weekly/2023-W22.md
+++ b/weekly/2023-W22.md
@@ -10,7 +10,7 @@ tags:
 ## Significant events
 
 - [ ] work with **main** project, maybe need to check accounts 1/♾️
-- [ ] lessons from [[@PythonTutorial2023]]
+- [ ] lessons from [[papis/14f60db29650af4d6edb2aef6d5539da/notes]]
 - [ ] check/work with [[comprehensive python cheatsheet]]
 - [ ] lessons from [[papis/2ef118ce3473c9fe93acfc371e3f736e-wengrow-jay/notes]]
 - [ ] lessons from [[papis/9c8a1a90d37c313ce0809814e3c99f82-kernighan-brian-w./notes]]
