Add new todo items

--- a/weekly/2023-W22.md
+++ b/weekly/2023-W22.md
@@ -17,6 +17,7 @@ tags:
 - [ ] [[papis/6f54b541f411cd3867159abbed2f6373-muratori-casey/notes]] videos during the week 2.5/♾️
 - [ ] workouts during the week according to the [[exercise plan]]
 - [ ] lessons from [Drawabox](https://drawabox.com/) 1/♾️
+- [ ] notebook disassemble checklist
 
 ## Next
 
