Add new weekly file

--- a/weekly/2023-W22.md
+++ b/weekly/2023-W22.md
@@ -110,6 +110,7 @@ tags:
 - [ ] https://webuxlab.com/en/projects/vm-passthrough-parsec
 - [ ] https://docs.onlykey.io/usersguide.html
 - [ ] oneliner's programs optimizations or...
+- [ ] termux/papis/tasker/share integration
 
 ## Week highlights
 
