Add new todo item

--- a/weekly/2023-W23.md
+++ b/weekly/2023-W23.md
@@ -9,16 +9,10 @@ tags:
 
 ## Significant events
 
-
-
 ## Next
-
-
 
 ## Inbox
 
-
+- [ ] telekasten link handler++ vim.cmd/other mix
 
 ## Week highlights
-
-
