Add pyenv check task

--- a/weekly/2023-W23.md
+++ b/weekly/2023-W23.md
@@ -14,5 +14,6 @@ tags:
 ## Inbox
 
 - [ ] telekasten link handler++ vim.cmd/other mix
+- [ ] deep pynev integration, no python3_host needed, need just to use pyenv
 
 ## Week highlights
