Add new todo items

--- a/weekly/2023-W23.md
+++ b/weekly/2023-W23.md
@@ -13,7 +13,11 @@ tags:
 
 ## Inbox
 
+- [ ] https://github.com/pallets/flask
 - [ ] telekasten link handler++ vim.cmd/other mix
 - [ ] deep pynev integration, no python3_host needed, need just to use pyenv
+- [ ] mpd workflow
+- [ ] You could also use w !python to run your python program (no need to save, it will pass the content as stdin, that's what w ! is for).
+      That way you don't to support multiple languages in your plugin. Just instruct the users to use this Vim feature
 
 ## Week highlights
