--- a/weekly/2023-W23.md
+++ b/weekly/2023-W23.md
@@ -21,3 +21,7 @@ tags:
       That way you don't to support multiple languages in your plugin. Just instruct the users to use this Vim feature
 
 ## Week highlights
+
+
+"freetube-bin"
+ https://aur.archlinux.org/packages/freetube-bin#:~:text=Package%20Details%3A-,freetube%2Dbin,-0.18.0%2D1
