Add new todo items

--- a/weekly/2023-W23.md
+++ b/weekly/2023-W23.md
@@ -22,6 +22,7 @@ tags:
 
 ## Week highlights
 
-
+https://superuser.com/questions/178587/how-do-i-detach-a-process-from-terminal-entirely
 "freetube-bin"
  https://aur.archlinux.org/packages/freetube-bin#:~:text=Package%20Details%3A-,freetube%2Dbin,-0.18.0%2D1
+https://www.youtube.com/watch?v=RoHI83C9Fyk interview
