--- a/weekly/2023-W23.md
+++ b/weekly/2023-W23.md
@@ -22,7 +22,13 @@ tags:
 
 ## Week highlights
 
+- [ ] setup post-commit hook for wiki
 https://superuser.com/questions/178587/how-do-i-detach-a-process-from-terminal-entirely
 "freetube-bin"
  https://aur.archlinux.org/packages/freetube-bin#:~:text=Package%20Details%3A-,freetube%2Dbin,-0.18.0%2D1
 https://www.youtube.com/watch?v=RoHI83C9Fyk interview
+- [ ] lua =vim.lsp.buf_get_clients() list clients
+
+createuser --interactive
+CREATE USER teamname WITH ENCRYPTED PASSWORD 'password';
+CREATE DATABASE yourdb OWNER teamname;
