--- a/weekly/2023-W22.md
+++ b/weekly/2023-W22.md
@@ -9,108 +9,14 @@ tags:
 
 ## Significant events
 
-- [ ] work with **main** project, maybe need to check accounts 1/♾️
-- [ ] lessons from [[papis/14f60db29650af4d6edb2aef6d5539da/notes]]
-- [ ] check/work with [[comprehensive python cheatsheet]]
-- [ ] lessons from [[papis/2ef118ce3473c9fe93acfc371e3f736e-wengrow-jay/notes]]
-- [ ] lessons from [[papis/9c8a1a90d37c313ce0809814e3c99f82-kernighan-brian-w./notes]]
-- [ ] [[papis/6f54b541f411cd3867159abbed2f6373-muratori-casey/notes]] videos during the week 2.5/♾️
-- [ ] workouts during the week according to the [[exercise plan]]
-- [ ] lessons from [Drawabox](https://drawabox.com/) 1/♾️
-- [ ] notebook disassemble checklist
+- [x] work with **main** project, maybe need to check accounts 1/♾️
+- [x] notebook disassemble checklist
 
 ## Next
 
-- [ ] rg pattern guide, find `\ ? \` through notes, auto-formatting script
-- [ ] fd/rg search through hidden files
-- [ ] neovim sudo save
-- [ ] zerotier own domain/hostname
-- [ ] settings repository sync?
-- [ ] check book Inko Ai Takita, Liz Staley - Learn Clip Studio Paint
-- [ ] Find case for phone
-- [ ] check watch - 143391459
-- [ ] work with z-shell note (hotkeys)
-- [ ] bash, readline - find diff, notes
-- [ ] review handmade hero to-do list
-- [ ] automatic lock on token remove/suspend, test (have some issues)
-- [ ] Certificates check (expired, etc...), cron job?
-- [ ] all used services in one place, awesome services
-- [ ] AdGuard notes
-- [ ] describe tasker/dnd setup
-- [ ] Fix Simple English Wikipedia not wikipedia in simple english
-  [ ] how subtitute recursive search with confirmations using nvim?
-- [ ] backup instances, 3 - 2 - 1
-- [ ] Workouts playlist in strawberry
-- [ ] check if I can use gpg-agent with pam
-
-- [ ] Shared fonts
-- [ ] Sort dictionaries
+- [x] backup instances, 3 - 2 - 1 initialize
 
 ## Inbox
-
-- [ ] audiobooks negentropy
-
-- [ ] https://www.youtube.com/watch?v=cgYMtuFa8Iw&t=3s
-- [ ] https://gist.github.com/nicosh/b4ef0d2392f78a241d600806c5328952
-- [ ] pytest & pycon flashcards
-
-- [ ] dmenu keybindings to notes
-- [ ] gptVSmbr difference note
-- [ ] shift+enter - dmenu term wait?
-- [ ] assoc fix in brave? (rar)
-- [ ] test coc-pyright, custom nvim instance?
-- [ ] qmk qwerty fallback (additional layer)
-- [ ] Vim image paste script (download image, resize, etc..., frequency hence?)
-- [ ] Vim format comments / align comments (vertical align)
-- [ ] Vim rename image under cursor in markdown file
-- [ ] review aliases
-- [ ] proxy-server
-- [ ] gnu pass note
-- [ ] hibernate/swap test
-- [ ] debugging articles
-- [ ] improve generate-image2.sh script
-
-- [ ] zotero script to find broken attachments (not linked...)
-- [ ] dunst DND after better way to check notifications, tasker integration
-- [ ] habbit tasks and repeat them
-- [ ] adguard -> dns -> zerotier hosts
-- [ ] colorscheme check: khal, glances, ncdu
-
-- [ ] screen recording, test sound, show saving path and the end
-- [ ] save full screenshot update notification - add path
-- [ ] opencv + screen + click script
-- [ ] music vidio pictures workflow
-- [ ] mouseless-workflow make more relevant
-- [ ] telekasten insert link follow grammar rules, add |title item, correct
-      rename (UUID issue?)
-- [ ] level 1, level 2, level 3 tags from zotero
-
-- [ ] koreader note
-- [ ] Xodo note
-- [ ] golden dict
-- [ ] encyclopedia
-- [ ] manga and comics note
-- [ ] tachiyomi note
-
-- [ ] singley-linked list
-- [ ] doubly-linked-list
-- [ ] skip list
-- [ ] Cartesian tree
-- [ ] Red-Black Tree
-- [ ] Splay Tree
-- [ ] AVL Tree
-- [ ] KD Tree
-
-- [ ] [My Inventions Nikola Tesla](https://archive.org/details/MyInventionsNikolaTesla/page/n29/mode/2up)
-- [ ] [Crafting Interpreters](http://craftinginterpreters.com/)
-- [ ] ldd utility
-- [ ] keybindings in command mode
-- [ ] openai SHAP-E
-- [ ] https://github.com/systemd/zram-generator
-- [ ] https://webuxlab.com/en/projects/vm-passthrough-parsec
-- [ ] https://docs.onlykey.io/usersguide.html
-- [ ] oneliner's programs optimizations or...
-- [ ] termux/papis/tasker/share integration
 
 ## Week highlights
 
