--- a/weekly/2023-W24.md
+++ b/weekly/2023-W24.md
@@ -48,6 +48,7 @@ tags:
 
 ## Inbox
 
+- [ ] auto insert mode in git-commit window (neovim)
 - [ ] audiobooks negentropy
 
 - [ ] https://www.youtube.com/watch?v=cgYMtuFa8Iw&t=3s
