Mark todo items

--- a/weekly/2023-W24.md
+++ b/weekly/2023-W24.md
@@ -9,128 +9,134 @@ tags:
 
 ## Significant events
 
-- [ ] lessons from [[papis/14f60db29650af4d6edb2aef6d5539da/notes]]
-- [ ] check/work with [[comprehensive python cheatsheet]]
-- [ ] lessons from [[papis/2ef118ce3473c9fe93acfc371e3f736e-wengrow-jay/notes]]
-- [ ] lessons from [[papis/9c8a1a90d37c313ce0809814e3c99f82-kernighan-brian-w./notes]]
-- [ ] [[papis/6f54b541f411cd3867159abbed2f6373-muratori-casey/notes]] videos during the week
-- [ ] workouts during the week according to the [[exercise plan]]
-- [ ] lessons from [Drawabox](https://drawabox.com/)
+- TODO: lessons from [[papis/14f60db29650af4d6edb2aef6d5539da/notes]]
+- TODO: check/work with [[comprehensive python cheatsheet]]
+- TODO: lessons from [[papis/2ef118ce3473c9fe93acfc371e3f736e-wengrow-jay/notes]]
+- TODO: lessons from [[papis/9c8a1a90d37c313ce0809814e3c99f82-kernighan-brian-w./notes]]
+- TODO: [[papis/6f54b541f411cd3867159abbed2f6373-muratori-casey/notes]] videos during the week
+- TODO: workouts during the week according to the [[exercise plan]]
+- TODO: lessons from [Drawabox](https://drawabox.com/)
 
 
 ## Next
 
-- [ ] rg pattern guide, find `\ ? \` through notes, auto-formatting script
-- [ ] fd/rg search through hidden files
-- [ ] neovim sudo save
-- [ ] zerotier own domain/hostname
-- [ ] settings repository sync?
-- [ ] check book Inko Ai Takita, Liz Staley - Learn Clip Studio Paint
-- [ ] Find case for phone
-- [ ] check watch - 143391459
-- [ ] work with z-shell note (hotkeys)
-- [ ] bash, readline - find diff, notes
-- [ ] review handmade hero to-do list
-- [ ] automatic lock on token remove/suspend, test (have some issues)
-- [ ] Certificates check (expired, etc...), cron job?
-- [ ] all used services in one place, awesome services
-- [ ] AdGuard notes
-- [ ] describe tasker/dnd setup
-- [ ] Fix Simple English Wikipedia not wikipedia in simple english
-- [ ] backup instances, 3 - 2 - 1 additional directories and finalize
-- [ ] Workouts playlist in strawberry
-- [ ] check if I can use gpg-agent with pam
+- NEXT: Arch-mainetance to aliases
+- NEXT: Fix Simple English Wikipedia not wikipedia in simple english
+- NEXT: rg guide (cht.sh version) + hidden files
+- NEXT: fd guide (cht.sh version) + hidden files
+- NEXT: neovim sudo save
+- NEXT: backup instances, 3 - 2 - 1 additional directories and finalize
+- NEXT: gnu pass note
+- NEXT: gnu pass negentropy
+- TODO: zerotier own domain/hostname
+- TODO: settings repository sync?
+- TODO: check book Inko Ai Takita, Liz Staley - Learn Clip Studio Paint
+- TODO: work with z-shell note (hotkeys)
+- TODO: bash, readline - find diff, notes
+- TODO: review handmade hero to-do list
+- TODO: automatic lock on token remove/suspend, test (have some issues)
+- TODO: Certificates check (expired, etc...), cron job?
+- TODO: all used services in one place, awesome services
+- TODO: AdGuard notes
+- TODO: describe tasker/dnd setup
+- TODO: check if I can use gpg-agent with pam
 
-- [ ] how subtitute recursive search with confirmations using nvim?
-- [ ] Shared fonts
-- [ ] Sort dictionaries
+- TODO: how subtitute recursive search with confirmations using nvim?
+- TODO: Shared fonts
+- TODO: Sort dictionaries
 
 
 ## Inbox
 
-- [ ] auto insert mode in git-commit window (neovim)
-- [ ] audiobooks negentropy
+- TODO: auto insert mode in git-commit window (neovim)
+- TODO: audiobooks negentropy
 
-- [ ] https://www.youtube.com/watch?v=cgYMtuFa8Iw&t=3s
-- [ ] https://gist.github.com/nicosh/b4ef0d2392f78a241d600806c5328952
-- [ ] pytest & pycon flashcards
+- TODO: https://www.youtube.com/watch?v=cgYMtuFa8Iw&t=3s
+- TODO: https://gist.github.com/nicosh/b4ef0d2392f78a241d600806c5328952
+- TODO: pytest & pycon flashcards
 
-- [ ] dmenu keybindings to notes
-- [ ] gptVSmbr difference note
-- [ ] shift+enter - dmenu term wait?
-- [ ] assoc fix in brave? (rar)
-- [ ] test coc-pyright, custom nvim instance?
-- [ ] qmk qwerty fallback (additional layer)
-- [ ] Vim image paste script (download image, resize, etc..., frequency hence?)
-- [ ] Vim format comments / align comments (vertical align)
-- [ ] Vim rename image under cursor in markdown file
-- [ ] review aliases
-- [ ] proxy-server
-- [ ] gnu pass note
-- [ ] hibernate/swap test
-- [ ] debugging articles
-- [ ] improve generate-image2.sh script
+- TODO: dmenu keybindings to notes
+- TODO: gptVSmbr difference note
+- TODO: shift+enter - dmenu term wait?
+- TODO: assoc fix in brave? (rar)
+- TODO: test coc-pyright, custom nvim instance?
+- TODO: Vim image paste script (download image, resize, etc..., frequency hence?)
+- TODO: Vim format comments / align comments (vertical align)
+- TODO: Vim rename image under cursor in markdown file
+- TODO: proxy-server
+- TODO: hibernate/swap test
+- TODO: debugging articles
+- TODO: improve generate-image2.sh script
 
-- [ ] zotero script to find broken attachments (not linked...)
-- [ ] dunst DND after better way to check notifications, tasker integration
-- [ ] habbit tasks and repeat them
-- [ ] adguard -> dns -> zerotier hosts
-- [ ] colorscheme check: khal, glances, ncdu
+- TODO: zotero script to find broken attachments (not linked...)
+- TODO: dunst DND after better way to check notifications, tasker integration
+- TODO: habbit tasks and repeat them
+- TODO: adguard -> dns -> zerotier hosts
+- TODO: colorscheme check: khal, glances, ncdu
 
-- [ ] screen recording, test sound, show saving path and the end
-- [ ] save full screenshot update notification - add path
-- [ ] opencv + screen + click script
-- [ ] music vidio pictures workflow
-- [ ] mouseless-workflow make more relevant
-- [ ] telekasten insert link follow grammar rules, add |title item, correct
+- TODO: screen recording, test sound, show saving path and the end
+- TODO: save full screenshot update notification - add path
+- TODO: opencv + screen + click script
+- TODO: music vidio pictures workflow
+- TODO: mouseless-workflow make more relevant
+- TODO: telekasten insert link follow grammar rules, add |title item, correct
       rename (UUID issue?)
-- [ ] level 1, level 2, level 3 tags from zotero
+- TODO: level 1, level 2, level 3 tags from zotero
 
-- [ ] koreader note
-- [ ] Xodo note
-- [ ] golden dict
-- [ ] encyclopedia
-- [ ] manga and comics note
-- [ ] tachiyomi note
+- TODO: koreader note
+- TODO: Xodo note
+- TODO: golden dict
+- TODO: encyclopedia
+- TODO: manga and comics note
+- TODO: tachiyomi note
 
-- [ ] singley-linked list
-- [ ] doubly-linked-list
-- [ ] skip list
-- [ ] Cartesian tree
-- [ ] Red-Black Tree
-- [ ] Splay Tree
-- [ ] AVL Tree
-- [ ] KD Tree
+- TODO: singley-linked list
+- TODO: doubly-linked-list
+- TODO: skip list
+- TODO: Cartesian tree
+- TODO: Red-Black Tree
+- TODO: Splay Tree
+- TODO: AVL Tree
+- TODO: KD Tree
 
-- [ ] [My Inventions Nikola Tesla](https://archive.org/details/MyInventionsNikolaTesla/page/n29/mode/2up)
-- [ ] [Crafting Interpreters](http://craftinginterpreters.com/)
-- [ ] ldd utility
-- [ ] keybindings in command mode
-- [ ] openai SHAP-E
-- [ ] https://github.com/systemd/zram-generator
-- [ ] https://webuxlab.com/en/projects/vm-passthrough-parsec
-- [ ] https://docs.onlykey.io/usersguide.html
-- [ ] oneliner's programs optimizations or...
-- [ ] termux/papis/tasker/share integration
+- TODO: [My Inventions Nikola Tesla](https://archive.org/details/MyInventionsNikolaTesla/page/n29/mode/2up)
+- TODO: [Crafting Interpreters](http://craftinginterpreters.com/)
+- TODO: ldd utility
+- TODO: keybindings in command mode
+- TODO: openai SHAP-E
+- TODO: https://github.com/systemd/zram-generator
+- TODO: https://webuxlab.com/en/projects/vm-passthrough-parsec
+- TODO: https://docs.onlykey.io/usersguide.html
+- TODO: oneliner's programs optimizations or...
+- TODO: termux/papis/tasker/share integration
 
 
-- [ ] https://github.com/pallets/flask
-- [ ] telekasten link handler++ vim.cmd/other mix
-- [ ] deep pynev integration, no python3_host needed, need just to use pyenv
-- [ ] mpd workflow
-- [ ] You could also use w !python to run your python program (no need to save, it will pass the content as stdin, that's what w ! is for).
+- TODO: https://github.com/pallets/flask
+- TODO: telekasten link handler++ vim.cmd/other mix
+- TODO: deep pynev integration, no python3_host needed, need just to use pyenv
+- TODO: mpd workflow
+- TODO: You could also use w !python to run your python program (no need to save, it will pass the content as stdin, that's what w ! is for).
       That way you don't to support multiple languages in your plugin. Just instruct the users to use this Vim feature
-- [ ] setup post-commit hook for wiki
-- [ ] https://superuser.com/questions/178587/how-do-i-detach-a-process-from-terminal-entirely
-- [ ] "freetube-bin"
- - [ ] https://aur.archlinux.org/packages/freetube-bin#:~:text=Package%20Details%3A-,freetube%2Dbin,-0.18.0%2D1
-- [ ] https://www.youtube.com/watch?v=RoHI83C9Fyk interview
-- [ ] lua =vim.lsp.buf_get_clients() list clients
+- TODO: "freetube-bin"
+- TODO: https://aur.archlinux.org/packages/freetube-bin#:~:text=Package%20Details%3A-,freetube%2Dbin,-0.18.0%2D1
+- TODO: https://www.youtube.com/watch?v=RoHI83C9Fyk interview
+- TODO: lua =vim.lsp.buf_get_clients() list clients
 
-- [ ] createuser --interactive
+- TODO: createuser --interactive
     CREATE USER teamname WITH ENCRYPTED PASSWORD 'password';
     CREATE DATABASE yourdb OWNER teamname;
 
 ## Week highlights
 
+- TODO: https://github.com/justfoolingaround/animdl
+- TODO: https://zero-to-nix.com/start/install
 
+## Done
+
+- DONE: review aliases
+- DONE: qmk qwerty fallback (additional layer)
+- DONE: https://superuser.com/questions/178587/how-do-i-detach-a-process-from-terminal-entirely
+- KILL: Workouts playlist in strawberry
+- KILL: setup post-commit hook for wiki
+- KILL: Find case for phone
+- KILL: check watch - 143391459
